--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,9 +1,9 @@
 {
   "welcome": "Welcome",
-  "Home": "Home",
-  "Educational": "Educational",
-  "Academic": "Academic",
-  "Youtube": "Youtube",
-  "Fun": "Fun",
-  "About": "About"
+  "home": "Home",
+  "educational": "Educational",
+  "academic": "Academic",
+  "youtube": "Youtube",
+  "fun": "Fun",
+  "about": "About"
 }
