--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -5,5 +5,7 @@
   "academic": "أكاديمي",
   "youtube": "Youtube",
   "fun": "وناسة",
-  "about":"من أكون؟"
+  "about": "من أكون؟",
+  "english": "English",
+  "arabic": "عربي"
 }
