--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -5,5 +5,7 @@
   "academic": "Academic",
   "youtube": "Youtube",
   "fun": "Fun",
-  "about": "About"
+  "about": "About",
+  "english": "English",
+  "arabic": "عربي"
 }
